# Discord-Sc2-Bot

./: .gitignore  .travis.yml  Pipfile  README.md  bot.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml  pythonpackage.yml
commands/: admin_add_admin.py  admin_add_role.py  base_class.py  public_mmr.py  public_remind.py  public_vod.py
systemd/: discordbot.service
test/: test_mmr.py  test_remind_at.py  test_remind_in.py  test_vod.py
tests/: test_remind_at.py  test_remind_in.py  test_vod.py
