[tool.poetry]
name = "discord-sc2-bot"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
PTable = "^0.9.2"
arrow = "^0.15.7"
discord = "^1.0.1"
idna-ssl = "^1.1.0"
requests = "^2.24.0"
loguru = "^0.5.1"
aiocontextvars = "^0.2.2"
atomicwrites = "^1.4.0"
contextvars = "^2.4"
win32-setctime = "^1.0.1"
watchgod = "^0.6"

[tool.poetry.dev-dependencies]
hypothesis = "^5.19.0"
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
