[tool.poetry]
name = "discord-sc2-bot"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
PTable = "^0.9.2"
arrow = "^1.0.3"
discord = "^1.0.1"
idna-ssl = "^1.1.0"
requests = "^2.25.1"
loguru = "^0.5.3"
aiocontextvars = "^0.2.2"
atomicwrites = "^1.4.0"
contextvars = "^2.4"
win32-setctime = "^1.0.3"
watchgod = "^0.7"
discord-py-slash-command = "^2.3.1"

[tool.poetry.dev-dependencies]
hypothesis = "^6.8.5"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
